--- a/styles.css
+++ b/styles.css
@@ -21,14 +21,18 @@ section {
     display: grid;
     place-items: center;
     align-content: center;
-    min-height: 100vh;
+    min-height: 50vh;
 }
 
 .header {
     text-align: center;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     font-size: 50px;
     color: white;
+    transform: translateY(-100%);
+    transition: all 1s;
+    filter: blur(5px);
+    opacity: 0;
 }
 
 .hidden {
@@ -41,17 +45,99 @@ section {
 .para {
     font-size: 20px;
     color: white;
-    margin-left: 10px;
-    margin-right: 10px;
+    padding: 40px;
 }
 
 @media (prefers-reduced-motion: reduce) {
-    .hidden {
+    .hidden, .header {
         transition: none;
     }
 }
+
 .visible {
     opacity: 1;
     filter: blur(0);
     transform: translateX(0);
+}
+
+.transparent-section {
+    background: url('/Users/anirudh/Downloads/nyc-aerial-view-new-york-city-night.jpg') center/cover no-repeat; /* Adjust the path to your image */
+    opacity: 70%;
+    height: 600px; /* Set the height as per your design */
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white; /* Set text color to be visible against the background */
+}
+
+.delayed-text {
+    visibility: hidden;
+    transform: translateY(-100%);
+    opacity: 0;
+    transition: all 1s ease-out;
+}
+
+.delayed-text.visible {
+    visibility: visible;
+    transform: translateY(0);
+    opacity: 1;
+}
+
+header {
+    background-color: white; /* Set the background color of the navigation bar */
+    color: black; /* Set the text color of the navigation bar */
+    padding: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo {
+    font-size: 1.5em;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+}
+
+nav ul li {
+    margin-right: 20px;
+}
+
+nav a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    transition: color 0.3s ease;
+}
+
+nav a:hover {
+    color: #5e5eff; /* Change the color on hover */
+}
+
+#color-mode-icon {
+    width: 1em;
+    height: auto;
+}
+  
+#color-mode-icon:hover {
+    cursor: pointer;
+}
+  
+footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.nav-item {
+    transform: translateX(-100%);
+    opacity: 0;
+    transition: all 1s ease-out;
+}
+
+.nav-item-visible {
+    transform: translateX(0);
+    opacity: 1;
 }
